# lich-rs

./: Cargo.toml  LICENSE  README.md  test_package.json
.github/workflows/: push.yml  release.yml
src/: cli.rs  compare.rs  github.rs  main.rs  parser.rs  types.rs
