[package]
name = "lich"
version = "0.1.1"
authors = ["Egill Sveinbjörnsson <egillsveinbjorns@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.5"
ansi_term = "0.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.7", features = ["full"] }
