[package]
name = "lich"
version = "0.1.1"
authors = ["Egill Sveinbjörnsson <egillsveinbjorns@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.8"
ansi_term = "0.12"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.16", features = ["full"] }
